==> Smoke666D/DASH/HAL/hal_timers.c <==
#include "hal_timers.h"

void HAL_TIMER_InitIt( TimerName_t TimerName, uint32_t freq_in_hz, uint32_t Period, void (*f)() ,uint8_t prior, uint8_t subprior )
{
#if MCU == CH32V2
    NVIC_InitTypeDef      NVIC_InitStructure = {0};
	uint32_t Freq = getTimerFreq( TimerName );
	vTimerInitRCC(TimerName) ;
	config[TimerName].Period = Period;
    config[TimerName].Div = (Freq /freq_in_hz);
    config[TimerName].callback_function = f;
    HW_TIMER_BaseTimerInit(TimerName);
	TIM_ClearITPendingBit(timers[TimerName], TIM_IT_Update);
	TIM_ITConfig(timers[TimerName], TIM_IT_Update,ENABLE);
	uint8_t irq;
	switch (TimerName )
	{
		case TIMER2:
			irq = TIM2_IRQn;
			break;
		case TIMER3:
			irq = TIM3_IRQn;
			break;
		case TIMER4:
			irq = TIM4_IRQn;
			break;
		case TIMER1:
		    irq = TIM1_UP_IRQn;
		    break;

	}
    NVIC_InitStructure.NVIC_IRQChannel =  irq;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = prior;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = subprior ;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);
  //  TIM_Cmd(timers[TimerName],ENABLE);
#endif
}

void HAL_TiemrEneblae( TimerName_t TimerName )
{
#if MCU == APM32
	TMR_Enable(timers[TimerName]);
#endif
#if MCU == CH32V2
	 TIM_Cmd(timers[TimerName], ENABLE);
#endif
}

void HAL_TiemrDisable( TimerName_t TimerName )
{

#if MCU == APM32
	TMR_Disable(timers[TimerName]);
#endif
#if MCU == CH32V2
	 TIM_Cmd(timers[TimerName], DISABLE);
#endif
}

void HAL_TIMER_PWMTimersInit(TimerName_t TimerName , uint32_t freq_in_hz, uint32_t Period, uint8_t channel)
{
#if MCU == APM32
	TMR_OCConfig_T OCcongigStruct;
	uint32_t Freq = getTimerFreq( TimerName );
	vTimerInitRCC(TimerName) ;
	config[TimerName].Period = Period;
	config[TimerName].Div = (Freq /freq_in_hz);
	HW_TIMER_BaseTimerInit(TimerName);
	OCcongigStruct.mode = TMR_OC_MODE_PWM1;
	OCcongigStruct.polarity = TMR_OC_POLARITY_HIGH;
	OCcongigStruct.outputState = TMR_OC_STATE_ENABLE;
	OCcongigStruct.idleState = TMR_OC_IDLE_STATE_RESET;
	OCcongigStruct.nIdleState = TMR_OC_NIDLE_STATE_RESET;
	OCcongigStruct.nPolarity = TMR_OC_NPOLARITY_HIGH;
	OCcongigStruct.outputNState = TMR_OC_NSTATE_DISABLE;
	OCcongigStruct.pulse = Period;// + 1;
	if (channel &  TIM_CHANNEL_1)
	{ TMR_ConfigOC1(timers[TimerName], &OCcongigStruct);
	  TMR_ConfigOC1Fast(timers[TimerName],TMR_OC_FAST_ENABLE);
	  TMR_ConfigOC1Preload(timers[TimerName], TMR_OC_PRELOAD_ENABLE);
	  TMR_DisableCCxChannel(timers[TimerName],TMR_CHANNEL_1); }
	if (channel &  TIM_CHANNEL_2)
	{ TMR_ConfigOC2(timers[TimerName], &OCcongigStruct);
	  TMR_ConfigOC2Fast(timers[TimerName],TMR_OC_FAST_ENABLE);
	  TMR_ConfigOC2Preload(timers[TimerName], TMR_OC_PRELOAD_ENABLE);
	  TMR_DisableCCxChannel(timers[TimerName],TMR_CHANNEL_2);}
	if (channel &  TIM_CHANNEL_3)
	{ TMR_ConfigOC3(timers[TimerName], &OCcongigStruct);
	  TMR_ConfigOC3Fast(timers[TimerName],TMR_OC_FAST_ENABLE);
	  TMR_ConfigOC3Preload(timers[TimerName], TMR_OC_PRELOAD_ENABLE);
	  TMR_DisableCCxChannel(timers[TimerName],TMR_CHANNEL_3); }
	if (channel &  TIM_CHANNEL_4)
	{ TMR_ConfigOC4(timers[TimerName], &OCcongigStruct);
	  TMR_ConfigOC4Fast(timers[TimerName],TMR_OC_FAST_ENABLE);
	  TMR_ConfigOC4Preload(timers[TimerName], TMR_OC_PRELOAD_ENABLE);
	  TMR_DisableCCxChannel(timers[TimerName],TMR_CHANNEL_4); }
	TMR_EnableAutoReload(timers[TimerName]);
	TMR_Enable(timers[TimerName]);
	TMR_EnablePWMOutputs(timers[TimerName]);
#endif

#if MCU ==  CH32V2
	 TIM_OCInitTypeDef TIM_OCInitStructure={0};
	 uint32_t Freq = getTimerFreq( TimerName );
     TIM_DeInit(timers[TimerName]);
	 TIM_InternalClockConfig(timers[TimerName]);
	 vTimerInitRCC(TimerName) ;
	 config[TimerName].Period = Period;
	 config[TimerName].Div = (Freq /freq_in_hz);
	 HW_TIMER_BaseTimerInit(TimerName);

	 TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_PWM2;
	 TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Enable;
	 TIM_OCInitStructure.TIM_Pulse = Period;
	 TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_High;
	 if (channel &  TIM_CHANNEL_1)
	 {
		 TIM_OC1Init( timers[TimerName], &TIM_OCInitStructure );
		 TIM_OC1PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
	 }
	 if (channel &  TIM_CHANNEL_2)
	 {
	     TIM_OC2Init( timers[TimerName], &TIM_OCInitStructure );
		 TIM_OC2PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
	 }
	 if (channel &  TIM_CHANNEL_3)
	 {
		TIM_OC3Init( timers[TimerName], &TIM_OCInitStructure );
	    TIM_OC3PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
	 }
	 if (channel &  TIM_CHANNEL_4)
	 {
		 TIM_OC4Init( timers[TimerName], &TIM_OCInitStructure );
		 TIM_OC4PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
	 }
	 TIM_ARRPreloadConfig( timers[TimerName], ENABLE );
	 TIM_CtrlPWMOutputs(timers[TimerName], ENABLE );
	// TIM_Cmd(timers[TimerName],ENABLE);
#endif
}

void HAL_TimeInitCaptureDMA( TimerName_t TimerName , uint32_t freq_in_hz, uint32_t Period, uint8_t channel )
{
     uint32_t Freq = getTimerFreq( TimerName );


#if MCU == CH32V2
     NVIC_InitTypeDef      NVIC_InitStructure = {0};
     TIM_ICInitTypeDef       TIM_ICInitStructure;

     TIM_DeInit(timers[TimerName]);
     vTimerInitRCC(TimerName) ;
     config[TimerName].Period = Period;
     config[TimerName].Div = (Freq /freq_in_hz) ;
    // config[TimerName].ClockDiv = temp_div;
     HW_TIMER_BaseTimerInit(TimerName);
     TIM_InternalClockConfig(timers[TimerName]);
     TIM_ICInitStructure.TIM_ICFilter = 4;
     TIM_ICInitStructure.TIM_ICPrescaler = TIM_ICPSC_DIV1;

     if (( channel == TIM_CHANNEL_1 ) || ( channel == TIM_CHANNEL_2 ))
     {
         TIM_ICInitStructure.TIM_Channel = TIM_Channel_1;
         TIM_ICInitStructure.TIM_ICPolarity=  (channel == TIM_CHANNEL_1) ? TIM_ICPolarity_Rising : TIM_ICPolarity_Falling ;
         TIM_ICInitStructure.TIM_ICSelection = (channel == TIM_CHANNEL_1) ? TIM_ICSelection_DirectTI : TIM_ICSelection_IndirectTI;
         TIM_ICInit(timers[TimerName],&TIM_ICInitStructure);
         TIM_ICInitStructure.TIM_Channel = TIM_Channel_2;
         TIM_ICInitStructure.TIM_ICPolarity= (channel == TIM_CHANNEL_2) ? TIM_ICPolarity_Rising : TIM_ICPolarity_Falling ;
         TIM_ICInitStructure.TIM_ICSelection = (channel == TIM_CHANNEL_2) ? TIM_ICSelection_DirectTI : TIM_ICSelection_IndirectTI;
         TIM_ICInit(timers[TimerName],&TIM_ICInitStructure);
         TIM_ITConfig(timers[TimerName],TIM_IT_CC1,ENABLE);
         TIM_ITConfig(timers[TimerName],TIM_IT_CC2,ENABLE);
        // TIM_SelectInputTrigger(TIM1, (channel == TIM_CHANNEL_1) ? TIM_TS_TI1FP1 : TIM_TS_TI2FP1);
     }
     if (( channel == TIM_CHANNEL_3 ) || ( channel == TIM_CHANNEL_4 ))
         {

             TIM_ICInitStructure.TIM_Channel = TIM_Channel_4;
             TIM_ICInitStructure.TIM_ICPolarity= (channel == TIM_CHANNEL_4) ? TIM_ICPolarity_Rising : TIM_ICPolarity_Falling ;
             TIM_ICInitStructure.TIM_ICSelection = (channel == TIM_CHANNEL_4) ? TIM_ICSelection_DirectTI : TIM_ICSelection_IndirectTI;
             TIM_ICInit(timers[TimerName],&TIM_ICInitStructure);
             TIM_ITConfig(timers[TimerName],TIM_IT_CC4,ENABLE);
         }
     TIM_DMACmd(timers[TimerName],TIM_DMA_CC4,ENABLE);

    // TIM_SelectSlaveMode(timers[TimerName], TIM_SlaveMode_Reset);
     //TIM_SelectMasterSlaveMode(timers[TimerName], TIM_MasterSlaveMode_Enable);
#endif

}

void HAL_TIMER_SetPWMPulse( TimerName_t TimerName , uint8_t channel, uint32_t pulse )
{
	HAL_TIMER_DisablePWMCH(TimerName , channel );
#if MCU == APM32
	if (channel &  TIM_CHANNEL_1) TMR_ConfigCompare1(timers[TimerName],pulse);
	if (channel &  TIM_CHANNEL_2) TMR_ConfigCompare2(timers[TimerName],pulse);
	if (channel &  TIM_CHANNEL_3) TMR_ConfigCompare3(timers[TimerName],pulse);
	if (channel &  TIM_CHANNEL_4) TMR_ConfigCompare4(timers[TimerName],pulse);
#endif
#if MCU == CH32V2
	 TIM_OCInitTypeDef TIM_OCInitStructure={0};
	 TIM_CtrlPWMOutputs(timers[TimerName], DISABLE );
	 TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_PWM1;
	 TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Enable;
	 TIM_OCInitStructure.TIM_Pulse = (uint16_t) pulse ;
	 TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_Low;
	 if (channel &  TIM_CHANNEL_1) TIM_OC1Init( timers[TimerName], &TIM_OCInitStructure );
	 if (channel &  TIM_CHANNEL_2) TIM_OC2Init( timers[TimerName], &TIM_OCInitStructure );
	 if (channel &  TIM_CHANNEL_3) TIM_OC3Init( timers[TimerName], &TIM_OCInitStructure );
	 if (channel &  TIM_CHANNEL_4) TIM_OC4Init( timers[TimerName], &TIM_OCInitStructure );
	TIM_CtrlPWMOutputs(timers[TimerName], ENABLE );
#endif

}

void HAL_TIMER_EnablePWMCH(TimerName_t TimerName , uint8_t channel )
{
#if MCU == APM32
	if (channel &  TIM_CHANNEL_1) TMR_EnableCCxChannel(timers[TimerName],TMR_CHANNEL_1);
	if (channel &  TIM_CHANNEL_2) TMR_EnableCCxChannel(timers[TimerName],TMR_CHANNEL_2);
	if (channel &  TIM_CHANNEL_3) TMR_EnableCCxChannel(timers[TimerName],TMR_CHANNEL_3);
	if (channel &  TIM_CHANNEL_4) TMR_EnableCCxChannel(timers[TimerName],TMR_CHANNEL_4);
#endif
#if MCU == CH32V2
		TIM_CtrlPWMOutputs(timers[TimerName], ENABLE);
#endif
}

static void vTimerInitRCC(TimerName_t TimerName)
{
	switch (TimerName)
	{
		case TIMER1:
#if MCU == APM32
			RCM_EnableAPB2PeriphClock(RCM_APB2_PERIPH_TMR1);
#endif
#if MCU == CH32V2
			RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM1, ENABLE);
#endif
			break;
		case TIMER2:
#if MCU == APM32
			RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR2);
#endif
#if MCU == CH32V2
			RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM2, ENABLE);
#endif
		    break;
		case TIMER3:
#if MCU == APM32
			RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR3);
#endif
#if MCU == CH32V2
			RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM3, ENABLE);
#endif
		    break;
		case TIMER4:
#if MCU == APM32
			RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR4);
#endif
#if MCU == CH32V2
			RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM4, ENABLE);
#endif
			break;
		case TIMER5:
#if MCU == APM32
		RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR5);
#endif
#if MCU == CH32V2
		RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM5, ENABLE);
#endif
		     break;
#if MCU == APM32
		case TIMER6:
			RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR6);
			 break;
		case TIMER7:
			RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR7);
			 break;
		case TIMER8:
			RCM_EnableAPB2PeriphClock(RCM_APB2_PERIPH_TMR8);
			 break;
		case TIMER9:
			RCM_EnableAPB2PeriphClock(RCM_APB2_PERIPH_TMR9);
			 break;
		case TIMER10:
			RCM_EnableAPB2PeriphClock(RCM_APB2_PERIPH_TMR10);
		     break;
		case TIMER11:
			RCM_EnableAPB2PeriphClock(RCM_APB2_PERIPH_TMR11);
		     break;
		case TIMER12:
			RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR12);
			 break;
		case TIMER13:
			RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR13);
			 break;
		case TIMER14:
			RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_TMR14);
#endif
		     break;
		default:
			break;

	}
}
