==> Smoke666D/DASH/DRIVER/hal_timers_ch32.c <==
#include "hal_timers.h"
#include "hal_irq.h"

void HAL_TiemrEneblae( TimerName_t TimerName )
{
    timers[TimerName]->CNT = 0;
    timers[TimerName]->CTLR1 |= TIM_CEN;

}

static void vTimerInitRCC(TimerName_t TimerName)
{

    if ((TimerName == TIMER1) || (TimerName > TIMER7))
    {
#if CORE == WCH32V3
        switch (TimerName)
        {
            case TIMER1:
#endif
                HAL_InitAPB2(RCC_APB2Periph_TIM1);
#if CORE == WCH32V3
                break;
            case TIMER8:
                HAL_InitAPB2( RCC_APB2Periph_TIM8);
                break;
            case TIMER9:
                HAL_InitAPB1(RCC_APB2Periph_TIM9);
                break;
            default:
                HAL_InitAPB1(RCC_APB2Periph_TIM10);
                break;
        }
#endif
    }
    else
    {
        switch (TimerName)
        {
            case TIMER2:
                HAL_InitAPB1(RCC_APB1Periph_TIM2);
                break;
            case TIMER3:
                HAL_InitAPB1(RCC_APB1Periph_TIM3);
                break;
            case TIMER4:
                HAL_InitAPB1(RCC_APB1Periph_TIM4);
                break;
#if CORE == WCH32V3
            case TIMER5:
                HAL_InitAPB1(RCC_APB1Periph_TIM5);
                break;
            case TIMER6:
                HAL_InitAPB1(RCC_APB1Periph_TIM6);
                break;
            default:
                HAL_InitAPB1(RCC_APB1Periph_TIM7);
                break;
#endif
        }

    }
}

INIT_FUNC_LOC void HAL_TIMER_InitIt( TimerName_t TimerName, uint32_t freq_in_hz, uint32_t Period, void (*f)() ,uint8_t prior, uint8_t subprior )
{

    config[TimerName].callback_function = f;
    HAL_TIMER_BaseTimerInit(TimerName , 0, ( getTimerFreq() /freq_in_hz),  Period );

    timers[TimerName]->INTFR = (uint16_t)~TIM_IT_Update;
    timers[TimerName]->DMAINTENR |=  TIM_IT_Update;
    uint8_t irq;
    switch (TimerName )
    {
#ifdef TIM1_UP_ENABLE
        case TIMER1:
            irq = TIM1_UP_IRQn;
            break;
#endif
#ifdef TIM2_UP_ENABLE
        case TIMER2:
            irq = TIM2_IRQn;
            break;
#endif
#ifdef TIM3_UP_ENABLE
        case TIMER3:
            irq = TIM3_IRQn;
            break;
#endif
#ifdef TIM4_UP_ENABLE
        case TIMER4:
            irq = TIM4_IRQn;
            break;
#endif
#ifdef TIM6_UP_ENABLE
        case TIMER6:
            irq = TIM6_IRQn;
            break;
#endif
#ifdef TIM8_UP_ENABLE
        default:
            irq = TIM8_UP_IRQn;
            break;
#endif
#ifdef TIM5_UP_ENABLE
        case TIMER5:
            irq = TIM5_IRQn;
            break;
#endif
    }
#if CORE == WCH32V2
    PFIC_IRQ_ENABLE_PG1(irq,prior,subprior);
#else
    PFIC_IRQ_ENABLE_PG2(irq,prior,subprior);

#endif
}

void HAL_TiemrDisable( TimerName_t TimerName )
{
    timers[TimerName]->CTLR1 &= (uint16_t)(~((uint16_t)TIM_CEN));
}

void HAL_TIMER_PWMTimersInit(TimerName_t TimerName , uint32_t freq_in_hz, uint32_t Period, uint8_t channel)
{
	 TIM_OCInitTypeDef TIM_OCInitStructure={0};

	 HAL_TIMER_BaseTimerInit(TimerName , 0,  (getTimerFreq() /freq_in_hz),  Period );
	 TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_PWM2;
	 TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Enable;
	 TIM_OCInitStructure.TIM_Pulse = Period;
	 TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_High;
	 if (channel &  TIM_CHANNEL_1)
	 {
		 TIM_OC1Init( timers[TimerName], &TIM_OCInitStructure );
		 TIM_OC1PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
	 }
	 if (channel &  TIM_CHANNEL_2)
	 {
	     TIM_OC2Init( timers[TimerName], &TIM_OCInitStructure );
		 TIM_OC2PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
	 }
	 if (channel &  TIM_CHANNEL_3)
	 {
		TIM_OC3Init( timers[TimerName], &TIM_OCInitStructure );
	    TIM_OC3PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
	 }
	 if (channel &  TIM_CHANNEL_4)
	 {
		 TIM_OC4Init( timers[TimerName], &TIM_OCInitStructure );
		 TIM_OC4PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
	 }
	 timers[TimerName]->CTLR1 |= TIM_ARPE;
	 timers[TimerName]->BDTR |= TIM_MOE;
}

INIT_FUNC_LOC  void HAL_TIMER_PWMTimersInit(TimerName_t TimerName , uint32_t freq_in_hz, uint32_t Period, uint8_t channel)
{
     TIM_OCInitTypeDef TIM_OCInitStructure={0};

     HAL_TIMER_BaseTimerInit(TimerName , 0, ( getTimerFreq() /freq_in_hz),  Period );
     TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_PWM2;
     TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Enable;
     TIM_OCInitStructure.TIM_Pulse = Period;
     TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_High;
     if (channel &  TIM_CHANNEL_1)
     {
         TIM_OC1Init( timers[TimerName], &TIM_OCInitStructure );
         TIM_OC1PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
     }
     if (channel &  TIM_CHANNEL_2)
     {
         TIM_OC2Init( timers[TimerName], &TIM_OCInitStructure );
         TIM_OC2PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
     }
     if (channel &  TIM_CHANNEL_3)
     {
        TIM_OC3Init( timers[TimerName], &TIM_OCInitStructure );
        TIM_OC3PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
     }
     if (channel &  TIM_CHANNEL_4)
     {
         TIM_OC4Init( timers[TimerName], &TIM_OCInitStructure );
         TIM_OC4PreloadConfig( timers[TimerName], TIM_OCPreload_Disable );
     }
     timers[TimerName]->CTLR1 |= TIM_ARPE;
     timers[TimerName]->BDTR |= TIM_MOE;
}

void HAL_TimeInitCaptureDMA( TimerName_t TimerName , uint32_t freq_in_hz, uint32_t Period, uint8_t channel )
{

     HAL_TIMER_BaseTimerInit(TimerName , 0, (getTimerFreq() /freq_in_hz),  Period );
     if ( channel == TIM_CHANNEL_2 )
     {
         TI2_Config(TimerName, TIM_ICPolarity_Rising, TIM_ICSelection_DirectTI, 4);
         timers[TimerName]->CHCTLR1 &= (uint16_t) ~((uint16_t)TIM_IC2PSC);   // Устанавилваем предделитель
         timers[TimerName]->CHCTLR1 |= (uint16_t)(TIM_ICPSC_DIV1 << 8);
         timers[TimerName]->DMAINTENR |= ( TIM_IT_CC2 | TIM_DMA_CC2 ) ;      //Рзрешаем прерывание и работу по DMA
     }
     if ( channel == TIM_CHANNEL_4 )
     {
          TI4_Config(TimerName, TIM_ICPolarity_Rising,  TIM_ICSelection_DirectTI,  4);
          timers[TimerName]->CHCTLR2 &= (uint16_t) ~((uint16_t)TIM_IC4PSC); // Устанавилваем предделитель
          timers[TimerName]->CHCTLR2 |= (uint16_t)(TIM_ICPSC_DIV1 << 8);
          timers[TimerName]->DMAINTENR |= ( TIM_IT_CC4 | TIM_DMA_CC4 ) ;    //Рзрешаем прерывание и работу по DMA
     }
}

void HAL_TIMER_SetPWMPulse( TimerName_t TimerName , uint8_t channel, uint32_t pulse )
{
     timers[TimerName]->BDTR &= (uint16_t)(~((uint16_t)TIM_MOE));
     TIM_OCInitTypeDef TIM_OCInitStructure={0};
     timers[TimerName]->BDTR &= (uint16_t)(~((uint16_t)TIM_MOE)); //Выключаем выхода ШИМ
     TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_PWM2;
     TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Enable;
     TIM_OCInitStructure.TIM_Pulse = (uint16_t) pulse ;
     TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_Low;
     if (channel &  TIM_CHANNEL_1) TIM_OC1Init( timers[TimerName], &TIM_OCInitStructure );
     if (channel &  TIM_CHANNEL_2) TIM_OC2Init( timers[TimerName], &TIM_OCInitStructure );
     if (channel &  TIM_CHANNEL_3) TIM_OC3Init( timers[TimerName], &TIM_OCInitStructure );
     if (channel &  TIM_CHANNEL_4) TIM_OC4Init( timers[TimerName], &TIM_OCInitStructure );
     timers[TimerName]->BDTR |= TIM_MOE;   //Включем выхода ШИМ
}

void HAL_TIMER_SetPWMPulse( TimerName_t TimerName , uint8_t channel, uint32_t pulse )
{
     timers[TimerName]->BDTR &= (uint16_t)(~((uint16_t)TIM_MOE));
     TIM_OCInitTypeDef TIM_OCInitStructure={0};
     timers[TimerName]->BDTR &= (uint16_t)(~((uint16_t)TIM_MOE)); //Выключаем выхода ШИМ
     TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_PWM1;
     TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Enable;
     TIM_OCInitStructure.TIM_Pulse = (uint16_t) pulse ;
     TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_Low;
     if (channel &  TIM_CHANNEL_1) TIM_OC1Init( timers[TimerName], &TIM_OCInitStructure );
     if (channel &  TIM_CHANNEL_2) TIM_OC2Init( timers[TimerName], &TIM_OCInitStructure );
     if (channel &  TIM_CHANNEL_3) TIM_OC3Init( timers[TimerName], &TIM_OCInitStructure );
     if (channel &  TIM_CHANNEL_4) TIM_OC4Init( timers[TimerName], &TIM_OCInitStructure );
     timers[TimerName]->BDTR |= TIM_MOE;   //Включем выхода ШИМ
}

void HAL_TIMER_EnablePWMCH(TimerName_t TimerName  )
{
    timers[TimerName]->BDTR |= TIM_MOE;

}
